# clevisLib

./: .gitmodules  CMakeLists.txt  Makefile  README.md  jose.cmake  vcpkg.json  wasm-cross-meson.txt.in
.github/workflows/: buildNative.yml  c-cpp.yml
cmake/: Config.cmake.in  addExternal.cmake  botan.cmake  jansson.cmake  openssl.cmake  targetInfo.cmake  zlib.cmake
src/: CMakeLists.txt  clevisDecrypt.cpp  clevisDecrypt.h  clevisEncrypt.cpp  clevisEncrypt.h  clevisLib.cpp  clevisLib.h  clevisTang.cpp  clevisTang.h  main.cpp
src/jose/: CMakeLists.txt  joseClevisDecrypt.cpp  joseClevisDecrypt.h  joseClevisEncrypt.cpp  joseClevisEncrypt.h  joseCommon.cpp  joseCommon.h  joseTang.cpp  joseTang.h
